Utworzono za pomocą Colaboratory

--- a/NUMPY/Zadania_001_010_exercises.ipynb
+++ b/NUMPY/Zadania_001_010_exercises.ipynb
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "fcb51bbb-ae33-46f5-9113-1233ff9a8c15"
+        "outputId": "08e664ed-314e-4028-9a21-728497f481c6"
       },
       "source": [
         "import numpy as np\n",
@@ -123,7 +123,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e66edfff-a2a6-4da6-bf9e-cfbe74c584c8"
+        "outputId": "bd3950ac-7d52-45c5-92ab-c7917d614679"
       },
       "source": [
         "A = np.array([[3, 2, 1, 4],\n",
@@ -138,7 +138,7 @@
         "D = np.array([0.1, 0.3])\n",
         "np.all(D)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 2
         }
       ]
     },
@@ -185,7 +185,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9489468a-f2e7-4831-8a4a-b218052d9778"
+        "outputId": "b3c75c6f-dae0-4af9-dd18-c27fa45e25a5"
       },
       "source": [
         "A = np.array([[3, 2, 1, 4],\n",
@@ -196,19 +196,19 @@
         "\n",
         "C = np.array([[True, False, False],\n",
         "              [True, True, True]])\n",
-        "np.all(A, axis=1)"
+        "np.all(C, axis=1)"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ True,  True])"
+              "array([False,  True])"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 7
         }
       ]
     },
@@ -242,13 +242,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8ZdasxYF1u8f"
+        "id": "8ZdasxYF1u8f",
+        "outputId": "839b3b71-1405-4579-a0b3-dc52fae4db8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([[0,0,0], [0,0,0]])\n",
+        "B = np.array([[0,0,0], [0,1,0]])\n",
+        "C = np.array([[False, False, False], [True, False, False]])\n",
+        "D = np.array([[0.1, 0.0]])\n",
+        "\n",
+        "np.any(D)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,13 +301,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XdfedHWm1ynE"
+        "id": "XdfedHWm1ynE",
+        "outputId": "d143a54a-049f-40d9-bbe8-8584728d0b00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([[0, 0, 0],\n",
+        "              [0, 0, 0]])\n",
+        "\n",
+        "B = np.array([[0, 0, 0],\n",
+        "              [0, 1, 0]])\n",
+        "\n",
+        "C = np.array([[False, False, False],\n",
+        "              [True, False, False]])\n",
+        "\n",
+        "D = np.array([[0.1, 0.0]])\n",
+        "np.any(D, axis=0)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,13 +356,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pjKDpdCy12cg"
+        "id": "pjKDpdCy12cg",
+        "outputId": "5ccf9023-a003-4c65-8f2b-7ca2439c1d55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([[3, 2, 1, np.nan],\n",
+        "              [5, np.nan, 1, 6]])\n",
+        "\n",
+        "np.isnan(A)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False,  True],\n",
+              "       [False,  True, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -339,13 +403,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gJTx2KhF175d"
+        "id": "gJTx2KhF175d",
+        "outputId": "9e6213d9-10b8-493a-bb1c-6fa5747487e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([0.4, 0.5, 0.3])\n",
+        "B = np.array([0.39999999, 0.5000001, 0.3])\n",
+        "np.allclose(A, B, rtol=0.01)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -366,13 +447,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G4jvbzwe1-AH"
+        "id": "G4jvbzwe1-AH",
+        "outputId": "c86b15a2-9aa8-45de-9934-0f45ef026ccd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([0.4, 0.5, 0.3])\n",
+        "B = np.array([0.3999999999, 0.5000000001, 0.3])\n",
+        "A==B"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -394,13 +492,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QWK7Yr671_xV"
+        "id": "QWK7Yr671_xV",
+        "outputId": "1024e9db-12ce-40bd-c684-24a5e60051e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([0.4, 0.5, 0.3, 0.9])\n",
+        "B = np.array([0.38, 0.51, 0.3, 0.91])\n",
+        "A>B"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -429,13 +544,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-_mfXExMOeSc"
+        "id": "-_mfXExMOeSc",
+        "outputId": "1de6c5c1-3a6a-470f-ccf9-814fa2b8fa1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.zeros((4,4), dtype=int)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -470,13 +603,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "49lqFGT42Dji"
+        "id": "49lqFGT42Dji",
+        "outputId": "a3cfa5eb-9d69-4cde-d4b6-b26a4df33a60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.full((10,10), 255, dtype=float)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.],\n",
+              "       [255., 255., 255., 255., 255., 255., 255., 255., 255., 255.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     }
   ]
 }
