--- a/NUMPY/011_020_exercises.ipynb
+++ b/NUMPY/011_020_exercises.ipynb
@@ -59,11 +59,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "HXMB7SMe1Wnz",
-        "outputId": "23fcc91e-decf-48f8-c023-476772224b33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "1a922d90-e7f6-4e29-e8c1-0dfa89ef0cf5"
       },
       "source": [
         "import numpy as np\n",
@@ -116,13 +116,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GlQI9dUUVY5D"
+        "id": "GlQI9dUUVY5D",
+        "outputId": "780ff80e-0ae4-4866-c0d3-5c1e489c90ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.arange(10,100)\n",
+        "A"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+              "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+              "       44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60,\n",
+              "       61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77,\n",
+              "       78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94,\n",
+              "       95, 96, 97, 98, 99])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,13 +176,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ehjc7nZpV_3a"
+        "id": "Ehjc7nZpV_3a",
+        "outputId": "dad573ac-7b40-4df7-d4b9-1d6678ee1004",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.arange(10,100)\n",
+        "A\n",
+        "A.reshape((9,10))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
+              "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],\n",
+              "       [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
+              "       [40, 41, 42, 43, 44, 45, 46, 47, 48, 49],\n",
+              "       [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],\n",
+              "       [60, 61, 62, 63, 64, 65, 66, 67, 68, 69],\n",
+              "       [70, 71, 72, 73, 74, 75, 76, 77, 78, 79],\n",
+              "       [80, 81, 82, 83, 84, 85, 86, 87, 88, 89],\n",
+              "       [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -208,13 +254,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jhXfKuTdXP2k"
+        "id": "jhXfKuTdXP2k",
+        "outputId": "17d8723a-01b1-4725-9e0c-aa66fe8dfd31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.eye(6, dtype = int)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 0, 0, 0, 0, 0],\n",
+              "       [0, 1, 0, 0, 0, 0],\n",
+              "       [0, 0, 1, 0, 0, 0],\n",
+              "       [0, 0, 0, 1, 0, 0],\n",
+              "       [0, 0, 0, 0, 1, 0],\n",
+              "       [0, 0, 0, 0, 0, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -245,13 +311,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kssg7-vEYX6T"
+        "id": "kssg7-vEYX6T",
+        "outputId": "9908c5e8-a34d-4786-b5df-374b22385eac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.random.seed(10)\n",
+        "np.random.rand(30, 1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.77132064],\n",
+              "       [0.02075195],\n",
+              "       [0.63364823],\n",
+              "       [0.74880388],\n",
+              "       [0.49850701],\n",
+              "       [0.22479665],\n",
+              "       [0.19806286],\n",
+              "       [0.76053071],\n",
+              "       [0.16911084],\n",
+              "       [0.08833981],\n",
+              "       [0.68535982],\n",
+              "       [0.95339335],\n",
+              "       [0.00394827],\n",
+              "       [0.51219226],\n",
+              "       [0.81262096],\n",
+              "       [0.61252607],\n",
+              "       [0.72175532],\n",
+              "       [0.29187607],\n",
+              "       [0.91777412],\n",
+              "       [0.71457578],\n",
+              "       [0.54254437],\n",
+              "       [0.14217005],\n",
+              "       [0.37334076],\n",
+              "       [0.67413362],\n",
+              "       [0.44183317],\n",
+              "       [0.43401399],\n",
+              "       [0.61776698],\n",
+              "       [0.51313824],\n",
+              "       [0.65039718],\n",
+              "       [0.60103895]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,13 +397,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qrIqjdTgZoXJ"
+        "id": "qrIqjdTgZoXJ",
+        "outputId": "987f5f3f-e8c0-4ea5-db6f-822fd1bd3a93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.random.seed(20)\n",
+        "np.random.randn(10,4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.88389311,  0.19586502,  0.35753652, -2.34326191],\n",
+              "       [-1.08483259,  0.55969629,  0.93946935, -0.97848104],\n",
+              "       [ 0.50309684,  0.40641447,  0.32346101, -0.49341088],\n",
+              "       [-0.79201679, -0.84236793, -1.27950266,  0.24571517],\n",
+              "       [-0.0441948 ,  1.56763255,  1.05110868,  0.40636843],\n",
+              "       [-0.1686461 , -3.18970279,  1.12013226,  1.33277821],\n",
+              "       [-0.24333877, -0.13003071, -0.10901737,  1.55618644],\n",
+              "       [ 0.12877835, -2.06694872, -0.88549315, -1.10457948],\n",
+              "       [ 0.93286635,  2.059838  , -0.93493796, -1.61299022],\n",
+              "       [ 0.52706972, -1.55110074,  0.32961334, -1.13652654]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -329,13 +465,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z53wec08avi9"
+        "id": "Z53wec08avi9",
+        "outputId": "9bf09fcf-811d-4b18-d6dc-c148e786fd87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.random.seed(30)\n",
+        "100+2.23606*np.random.randn(10,4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 97.1735024 , 103.41648804,  97.8294321 , 101.05219953],\n",
+              "       [ 99.7748361 , 100.67929979,  96.14064445, 103.54436835],\n",
+              "       [100.30029524,  97.52500477, 103.52900702, 100.24037185],\n",
+              "       [ 98.29154322,  98.26663198, 103.09436529, 101.70026667],\n",
+              "       [ 99.36127949, 101.20382198,  95.3402821 , 102.09693617],\n",
+              "       [ 99.98708005,  98.95468898,  99.05411241, 102.38024583],\n",
+              "       [ 93.50789585, 103.61546389, 103.18752564,  98.51356767],\n",
+              "       [102.20255904,  96.19765764,  97.54001244,  97.05814087],\n",
+              "       [101.81232867,  97.66381287,  98.45884177,  98.09318449],\n",
+              "       [102.48979044,  95.70414924,  98.43162211, 101.89861138]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,13 +521,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1GbS3dat1gIl"
+        "id": "1GbS3dat1gIl",
+        "outputId": "71f5d28e-5182-4b55-b526-2e2ee58ccd0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "A = np.array([[1, 4, 3],\n",
+        "              [5, 2, 6]])\n",
+        "for item in np.nditer(A):\n",
+        "    print(item)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "3\n",
+            "5\n",
+            "2\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -389,13 +570,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZuaUXkg73Amn"
+        "id": "ZuaUXkg73Amn",
+        "outputId": "4c60b9c6-cb37-48ce-e737-2e69a2b61710",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.linspace(0,1, 11)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -421,13 +617,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BAnycpr13-Nz"
+        "id": "BAnycpr13-Nz",
+        "outputId": "7505da3e-9297-47b0-929b-e9bb73981e5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.random.seed(42)\n",
+        "np.random.randint(1,50,6)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([39, 29, 15, 43,  8, 21])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -453,10 +665,156 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UrVAQwBJ6HpX"
+        "id": "UrVAQwBJ6HpX",
+        "outputId": "8384f598-c5c4-450b-9cc8-10e4ff59173e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "np.diag(np.arange(6))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0, 0],\n",
+              "       [0, 1, 0, 0, 0, 0],\n",
+              "       [0, 0, 2, 0, 0, 0],\n",
+              "       [0, 0, 0, 3, 0, 0],\n",
+              "       [0, 0, 0, 0, 4, 0],\n",
+              "       [0, 0, 0, 0, 0, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uo6m9BJ8MkeL",
+        "outputId": "9286ebce-bb3a-4a38-c930-6ed71aa9c113",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.diag([0, 1, 2, 3, 4, 5])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0, 0],\n",
+              "       [0, 1, 0, 0, 0, 0],\n",
+              "       [0, 0, 2, 0, 0, 0],\n",
+              "       [0, 0, 0, 3, 0, 0],\n",
+              "       [0, 0, 0, 0, 4, 0],\n",
+              "       [0, 0, 0, 0, 0, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4sDj9rqUM6zn",
+        "outputId": "380b20ac-c8a0-40eb-e0e7-b677e861ee08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.zeros((4,10))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NOt8y-vkM9hy",
+        "outputId": "a8cb425b-b143-4fe5-ae91-8e51c5fe97fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.full((4,4),4)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 4, 4, 4],\n",
+              "       [4, 4, 4, 4],\n",
+              "       [4, 4, 4, 4],\n",
+              "       [4, 4, 4, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uPVSqcd7NjXR",
+        "outputId": "ad37661e-7247-42b8-c721-bbe5baf392d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.arange(5,10,2)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-x0r7r-zNphG"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
